--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,8 +2,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading"> Confirmation de votre venue !</h2>
+                    <h3 class="section-subheading text-muted"> Merci de nous communiquer l'heure de votre venue ainsi que le nombre de participants (Adultes et enfants). Qui plus est, désirez-vous obtenir le numéro de compte des mariés ?  </h3>
                 </div>
             </div>
             <div class="row">
@@ -12,11 +12,11 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                    <input type="text" class="form-control" placeholder="Votre nom*" id="name" required data-validation-required-message="Please enter your name.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <input type="email" class="form-control" placeholder="Votre Email *" id="email" required data-validation-required-message="Hey ! N'oubliez pas de nous donner votre adresse !">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
@@ -26,7 +26,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                    <textarea class="form-control" placeholder="Votre message: Quelle heure, combien de personne ? Désirez-vous que nous vous communiquions le numéro de compte des mariés ? *" id="message" required data-validation-required-message="Hey ! N'oubliez pas de nous communiquer l'heure de votre venue et le nombre de participants."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
