--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,8 +2,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading"> Confirmation de votre venue !</h2>
-                    <h3 class="section-subheading text-muted"> Merci de nous communiquer l'heure de votre venue ainsi que le nombre de participants (Adultes et enfants). Qui plus est, désirez-vous obtenir le numéro de compte des mariés ?  </h3>
+                    <h2 class="section-heading"> Confirmez votre venue !</h2>
+                    <h3 class="section-subheading text-muted"> Merci de nous communiquer l'heure de votre venue ainsi que le nombre de participants (Adultes et enfants). Désirez-vous obtenir le numéro de compte des mariés ? </h3>
                 </div>
             </div>
             <div class="row">
@@ -20,7 +20,7 @@
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="numero_compte" required data-validation-required-message="Désirez-vous obtenir le numéro de compte des mariés ? OUI / NON">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
