--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -20,13 +20,13 @@
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="numero_compte" required data-validation-required-message="Désirez-vous obtenir le numéro de compte des mariés ? OUI / NON">
+                                    <input type="tel" class="form-control" placeholder="Désirez-vous obtenir le numéro de compte des mariés ? OUI/NON *" id="numero_compte" required data-validation-required-message="Hey ! N'oubliez pas de nous communiquer cette info!">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="Votre message: Quelle heure, combien de personne ? Désirez-vous que nous vous communiquions le numéro de compte des mariés ? *" id="message" required data-validation-required-message="Hey ! N'oubliez pas de nous communiquer l'heure de votre venue et le nombre de participants."></textarea>
+                                    <textarea class="form-control" placeholder="Votre message: Quelle heure, combien de personne ? * " id="message" required data-validation-required-message="Hey ! N'oubliez pas de nous communiquer l'heure de votre venue et le nombre de participants."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
