--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -12,7 +12,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Votre nom*" id="name" required data-validation-required-message="Please enter your name.">
+                                    <input type="text" class="form-control" placeholder="Votre Nom*" id="name" required data-validation-required-message="Hé, mais qui êtes-vous ?">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
@@ -26,7 +26,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="Votre message: Quelle heure, combien de personne ? * " id="message" required data-validation-required-message="Hey ! N'oubliez pas de nous communiquer l'heure de votre venue et le nombre de participants."></textarea>
+                                    <textarea class="form-control" placeholder="Votre message: A quelle heure venez-vous ? Combien de personnes prévues (Enfants, Adultes) ? * " id="message" required data-validation-required-message="Hey ! N'oubliez pas de nous communiquer l'heure de votre venue et le nombre de participants."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
