--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted"> Notre histoire !</h3>
+                    <h2 class="section-heading">Notre histoire !</h2>
+                    <h3 class="section-subheading text-muted"> Résumé rapide </h3>
                 </div>
             </div>
             <div class="row">
@@ -16,11 +16,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2007</h4>
+                                    <h4>Décembre 2007</h4>
                                     <h4 class="subheading">Nos début</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"> Après s'être courtisés durant de nombreux mois,   </p>
+                                    <p class="text-muted"> Après s'être courtisés durant de nombreux mois, la saint-Nicolas (des étudiants, bien sûr) marque le début de notre histoire. Pas très romantique, mais diablement efficace !  </p>
                                 </div>
                             </div>
                         </li>
@@ -30,11 +30,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>Septembre 2010 </h4>
+                                    <h4 class="subheading">Diplomés !</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted"> Après 5 ans de dur labeur, un nombre substentiel de soirées et quelques voyages, nous voici diplomés en Biologie moléculaire et tout deux à l'aube de notre doctorat. </p>
                                 </div>
                             </div>
                         </li>
@@ -44,11 +44,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4> Avril 2011 </h4>
+                                    <h4 class="subheading">Emménagement !</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted"> Nous voilà dans notre premier nid douillet, prêt du centre ville ! Bien installé et bien entourés, nous voilà bien lancés dans la vie active ! </p>
                                 </div>
                             </div>
                         </li>
@@ -58,19 +58,33 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4>2015</h4>
+                                    <h4 class="subheading">Mariage ! </h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                                 </div>
                             </div>
                         </li>
+                        </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
+                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2016</h4>
+                                    <h4 class="subheading">USA ! </h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Nous voilà sur le départ pour les USA. </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4> What's
+                                    <br>next?!</h4>
                             </div>
                         </li>
                     </ul>
