--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Notre histoire !</h2>
-                    <h3 class="section-subheading text-muted"> Résumé rapide </h3>
+                    <h3 class="section-subheading text-muted"> Relévé de littérature </h3>
                 </div>
             </div>
             <div class="row">
@@ -69,7 +69,7 @@
                     
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/5.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -77,13 +77,14 @@
                                     <h4 class="subheading">USA ! </h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Nous voilà sur le départ pour les USA.</p>
+                                    <p class="text-muted">Nous voilà sur le départ pour les USA: une nouvelle aventure démarrera en 2016, à Madison (Wisconsin). Sortez les moufles !</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4> What's
+                                <h4>Now,
+                                    <br>What's
                                     <br>next?!</h4>
                             </div>
                         </li>
