--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,8 +42,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
+                <div class="intro-lead-in">Bienvenue sur le site de notre mariage!</div>
+                <div class="intro-heading">Nous espérons vous y voir !</div>
                 <a href="#services" class="page-scroll btn btn-xl">En savoir plus!</a>
             </div>
         </div>
