--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Programme du samedi 13 juin 2015 </h2>
+                    <h3 class="section-subheading text-muted">Vous voulez savoir comment va se dérouler la journée ? Vous voilà servis !</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -13,24 +13,24 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Mariage civil </h4>
+                    <p class="text-muted">Pour ceux qui désirent assister au mariage civil, celui-ci se déroulera à la maison communale de Hamoir. Rendez-vous à 15h00 ! </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">En route pour la fête</h4>
+                    <p class="text-muted"> Cinq minutes de trajet, c'est tout ce qui nous sépare de l'apéro, du repas et de la soirée ! </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Cocktail, repas  & soirée </h4>
+                    <p class="text-muted">Voilà, il n'y a plus qu'à faire la fête. Rendez-vous à partir de 17h à l'Hostellerie Saint-Roch, à Comblain-la-tour (voir ci-dessous pour les plans d'accès).</p>
                 </div>
             </div>
         </div>
