--- a/_includes/team.html
+++ b/_includes/team.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Plans d'accès</h2>
+                    <h3 class="section-subheading text-muted"> Alors, comment se rendre sur les lieux du mariage ?</h3>
                 </div>
             </div>
             <div class="row">
@@ -22,7 +22,7 @@
                         </ul>
                     </div>
                 </div>
-                {% endfor %}
+                {% endfor %} 
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
