--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,10 +17,10 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Décembre 2007</h4>
-                                    <h4 class="subheading">Nos début</h4>
+                                    <h4 class="subheading">Nos début...</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"> Après s'être courtisés durant de nombreux mois, la saint-Nicolas (des étudiants, bien sûr) marque le début de notre histoire. Pas très romantique, mais diablement efficace !  </p>
+                                    <p class="text-muted"> Après que nous nous soyons courtisés (hum hum) durant de nombreux mois, la saint-Nicolas [des étudiants, bien sûr] marque le début de notre histoire. Bon, ce n'est pas très romantique, mais diablement efficace !  </p>
                                 </div>
                             </div>
                         </li>
@@ -34,7 +34,7 @@
                                     <h4 class="subheading">Diplomés !</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"> Après 5 ans de dur labeur, un nombre substentiel de soirées et quelques voyages, nous voici diplomés en Biologie moléculaire et tout deux à l'aube de notre doctorat. </p>
+                                    <p class="text-muted"> Après 5 ans de dur labeur, un nombre substentiel de soirées et quelques voyages, nous voici diplomés en Biologie moléculaire et nous entamons tout deux une thèse de doctorat. </p>
                                 </div>
                             </div>
                         </li>
