--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,9 @@
                         <a class="page-scroll" href="#team">Plans d'accès</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#clients">Liste de mariage</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Confirmez !</a>
                     </li>
                 </ul>
