--- a/_includes/services.html
+++ b/_includes/services.html
@@ -9,26 +9,17 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
+                    <img class="img-circle" src="img/services/A_1.jpg" alt="" align="center">
                     <h4 class="service-heading">Mariage civil </h4>
                     <p class="text-muted">Pour ceux qui désirent assister au mariage civil, celui-ci se déroulera à la maison communale de Hamoir. Rendez-vous à 15h00 ! </p>
                 </div>
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
+                    <img class="img-circle"  src="img/services/B_1.jpg" align="middle" alt="">
                     <h4 class="service-heading">En route pour la fête</h4>
                     <p class="text-muted"> Cinq minutes de trajet, c'est tout ce qui nous sépare de l'apéro, du repas et de la soirée ! </p>
                 </div>
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
+                    <img class="img-circle" src="img/services/C_1.jpg" align="middle" alt="">
                     <h4 class="service-heading">Cocktail, repas  & soirée </h4>
                     <p class="text-muted">Voilà, il n'y a plus qu'à faire la fête. Rendez-vous à partir de 17h à l'Hostellerie Saint-Roch, à Comblain-la-tour (voir ci-dessous pour les plans d'accès).</p>
                 </div>
