--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,27 +1,12 @@
 <!-- Clients Aside -->
     <aside class="clients">
-        <div class="container">
+         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
-                    </a>
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading"> List de Mariage </h2>
+                    <h3 class="section-subheading text-muted">Vous voulez savoir comment va se dérouler la journée ? Vous voilà servis !</h3>
                 </div>
             </div>
         </div>
+
     </aside>
