--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,11 +26,13 @@
                         <a class="page-scroll" href="#about">Notre histoire</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Plans d'accès</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#clients">Liste de mariage</a>
                     </li>
+
+                    <li>
+                        <a class="page-scroll" href="#team">Plans d'accès</a>
+                    </li>
+                   
                     <li>
                         <a class="page-scroll" href="#contact">Confirmez !</a>
                     </li>
@@ -45,8 +47,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Bienvenue sur le site de notre mariage!</div>
-                <div class="intro-heading">Nous espérons vous y voir !</div>
+                <img class="" src="img/intro/acceuil.png" alt="">
+                <div class="intro-lead-in"> Bienvenue à notre mariage!</div>
+                <div class="intro-heading"> Samedi 13 juin 2015 !</div>
                 <a href="#services" class="page-scroll btn btn-xl">En savoir plus!</a>
             </div>
         </div>
