--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,12 +1,18 @@
 <!-- Clients Aside -->
-    <aside class="clients">
+<section id="clients">
          <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading"> List de Mariage </h2>
-                    <h3 class="section-subheading text-muted">Vous voulez savoir comment va se dérouler la journée ? Vous voilà servis !</h3>
+                    <h2 class="section-heading"> Liste de Mariage </h2>
+                    <h4 class="section-subheading"> Une liste de mariage ? Pas exactement ! Etant déjà 
+                    bien installés dans notre petit nid, nous n'avons plus vraiment besoin de vaisselle. En revanche, nous allons bientôt prendre la direction des USA, où nous résidrons 2 ans. Nous vous proposons dès lors de participer aux visites que nous effectuerons sur place : la parc du Yellowstone, New York, Montréal, la Louisiane, l'Amérique du sud,... Il y a tant à faire sur place ! </h4>
+					
+					<h3 class="section-subheading text-muted">
+                    D'un point de vue pratique, vous avez 2 options : soit vous effectuez un virement sur le compte des mariés (demandez-le lors de la confirmation de votre venue dans le formulaire ci-dessous), soit vous déposez une enveloppe dans l'urne consacrée à cet effet le jour du mariage. Un tout grand merci !   </h3>
+                <img class="" src="img/liste_mariage/liste mariage-01.png" alt="">
+
                 </div>
             </div>
         </div>
-
-    </aside>
+ 
+ </section>
