--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,33 +1,31 @@
 <!-- Team Section -->
     <section id="team" class="bg-light-gray">
-        <div class="container">
+      
+      <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Plans d'accès</h2>
-                    <h3 class="section-subheading text-muted"> Alors, comment se rendre sur les lieux du mariage ?</h3>
+                    <h2 class="section-heading"> Plans d'accès </h2>
+                    <h3 class="section-subheading text-muted"> Alors, comment faire pour venir fêter cela avec nous ?! Cliquez sur les images pour obtenir le plan google map. Pour obtenir un pdf des adresses et plans d'accès, <a href="http://dl.dropbox.com/u/110671384/pdf_plan_d'acces.pdf" target="_blank"> cliquez ici !</a> </h3>
+                    
                 </div>
             </div>
-            <div class="row">
-                {% for member in site.people %}
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
-                        <h4>{{ member.name }}</h4>
-                        <p class="text-muted">{{ member.position }}</p>
-                        <ul class="list-inline social-buttons">
-                            {% for network in member.social %}
-                            <li><a href="{{ network.url }}"><i class="fa fa-{{ network.title }}"></i></a>
-                            {% endfor %}
+            <div class="row text-center">
+                <div class="col-md-6">
+                    <a href="http://bit.ly/1DbN4YY" target="_blank">
+                    <h4 class="service-heading"> Administration communale de Hamoir </h4>
+                    <p class="text-muted">rue de Tohogne 14 - 4180 HAMOIR </p>
+                    <img class="" src="img/acces/A_1.jpg" alt="">
+                    </a>
 
-                        </ul>
-                    </div>
                 </div>
-                {% endfor %} 
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                <div class="col-md-6">
+                    <a href="http://bit.ly/1HPQOoo" target="_blank">
+                    <h4 class="service-heading">Hostellerie du Saint Roch</h4>
+                    <p class="text-muted"> Rue du Parc - Vallee De L'Ourthe, 4180 COMBLAIN-LA-TOUR </p>
+                    <img class=""  src="img/acces/B_1.jpg" alt="">
+                    </a>
                 </div>
+             
             </div>
         </div>
     </section>
