--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,41 +3,20 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading"> Confirmez votre venue !</h2>
-                    <h3 class="section-subheading text-muted"> Merci de nous communiquer l'heure de votre venue ainsi que le nombre de participants (Adultes et enfants). Désirez-vous obtenir le numéro de compte des mariés ? </h3>
+                    <h3 class="section-subheading text-muted"> Merci de nous communiquer les informations suivantes :   <br>
+                       <br>
+                       1 - A quelle heure comptez-vous venir ? <br>
+                        <br>
+                       2 - Le nombre de participants (Adultes et enfants) ? <br>
+                        <br>
+                       3 - Désirez-vous obtenir le numéro de compte des mariés ? </h3>
+
+                       <a href="mailto:justine.and.fred@gmail.com?subject=Participation au mariage&body=Merci de mentionner l'heure et le nombre de participants et d'indiquer si vous désirez le numéro de compte des mariés? A très bientôt, Justine et Fred"> <button type="submit" class="btn btn-xl">Email de confirmation</button></a> 
+
                 </div>
+
             </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Votre Nom*" id="name" required data-validation-required-message="Hé, mais qui êtes-vous ?">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Votre Email *" id="email" required data-validation-required-message="Hey ! N'oubliez pas de nous donner votre adresse !">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Désirez-vous obtenir le numéro de compte des mariés ? OUI/NON *" id="numero_compte" required data-validation-required-message="Hey ! N'oubliez pas de nous communiquer cette info!">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <textarea class="form-control" placeholder="Votre message: A quelle heure venez-vous ? Combien de personnes prévues (Enfants, Adultes) ? * " id="message" required data-validation-required-message="Hey ! N'oubliez pas de nous communiquer l'heure de votre venue et le nombre de participants."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
+            
             </div>
         </div>
     </section>
