--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,7 +20,7 @@
                                     <h4 class="subheading">Nos début...</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"> Après que nous nous soyons courtisés (hum hum) durant de nombreux mois, la saint-Nicolas [des étudiants, bien sûr] marque le début de notre histoire. Bon, ce n'est pas très romantique, mais diablement efficace !  </p>
+                                    <p class="text-muted"> Etudier la systématique des algues bleues, c'est pas très sexy. L'appareil reproducteur des gastéropodes non plus, d'ailleurs...Et c'est dans ce contexte que nous faisons connaissance. Après s'être courtisés pendant quelques mois, c'est le fruit de la fermentation du houblon qui catalisera le début de notre histoire: pas très romantique, mais diablement efficace ! Merci Saint-Nicolas ! </p>
                                 </div>
                             </div>
                         </li>
@@ -34,7 +34,7 @@
                                     <h4 class="subheading">Diplomés !</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"> Après 5 ans de dur labeur, un nombre substentiel de soirées et quelques voyages, nous voici diplomés en Biologie moléculaire et nous entamons tout deux une thèse de doctorat. </p>
+                                    <p class="text-muted"> Après 5 ans de dur labeur, nous approchons de la fin de nos études. Notre parcours universitaire fût jalonné de plusieurs voyages, de l'absorption d'une quantité subtentielle d'informations qui se transformeront rapidement en souvenirs évanescents, mais il fût surtout le théâtre de nombreuses soirées mémorables ! Vivement le doctorat ! </p>
                                 </div>
                             </div>
                         </li>
@@ -45,10 +45,10 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4> Avril 2011 </h4>
-                                    <h4 class="subheading">Emménagement !</h4>
+                                    <h4 class="subheading">La vie à deux !</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"> Nous voilà dans notre premier nid douillet, prêt du centre ville ! Bien installé et bien entourés, nous voilà bien lancés dans la vie active ! </p>
+                                    <p class="text-muted"> Nous voici dans notre premier nid douillet, près du centre ville. Nous profiterons durant 4 ans d'une vue imprenable sur Liège et profiterons régulièrement des lumières de la foire d'octobre ainsi que de la verdure printanière du parc d'Avroy. Bien installé et bien entourés, nous voilà lancés dans la vie active ! </p>
                                 </div>
                             </div>
                         </li>
@@ -57,12 +57,12 @@
                                 <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>2015</h4>
+                                <div class="timeline-heading"> 
+                                    <h4> 13 Juin 2015</h4>
                                     <h4 class="subheading">Mariage ! </h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted"> Huit ans déjà que nous filons le parfait amour: 3113 jours pour être exact. 4 482 720 minutes. Et tout cela, sans une ombre au tableau ! Que demander de plus ? Eh bien, marions-nous !   </p>
                                 </div>
                             </div>
                         </li>
@@ -73,17 +73,17 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2015</h4>
+                                    <h4>2016</h4>
                                     <h4 class="subheading">USA ! </h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Nous voilà sur le départ pour les USA: une nouvelle aventure démarrera en 2016, à Madison (Wisconsin). Sortez les moufles !</p>
+                                    <p class="text-muted"> Nous voilà sur le départ pour les USA: une nouvelle aventure démarrera en 2016, à l'Université de Madison, au Wisconsin. Une petite ville américaine située dans le Midwest, où les saisons sont réputées très constrastées: sortez les moufles !</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Now,
+                                <h4>Hey,
                                     <br>What's
                                     <br>next?!</h4>
                             </div>
