--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -4,11 +4,11 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading"> Liste de Mariage </h2>
-                    <h4 class="section-subheading"> Une liste de mariage ? Pas exactement ! Etant déjà 
-                    bien installés dans notre petit nid, nous n'avons plus vraiment besoin de vaisselle. En revanche, nous allons bientôt prendre la direction des USA, où nous résidrons 2 ans. Nous vous proposons dès lors de participer aux visites que nous effectuerons sur place : la parc du Yellowstone, New York, Montréal, la Louisiane, l'Amérique du sud,... Il y a tant à faire sur place ! </h4>
+                    <h4 class="section-subheading"> Une liste de mariage ? Pas exactement ! Etant donné que nous sommes d'ores et déjà 
+                    confortablement installés dans notre petit nid douillet, une liste de mariage serait superflue. En revanche, nous allons bientôt prendre la direction des USA pour emménager à Madison, dans le Midwest. Sa position centrale en fait un fantastique camp de base permettant de rejoindre de nombreuses destinations alléchantes: le Yellowstone, New York, Montréal, Chicago, la Louisiane, voire même l'Amérique du sud sont à portée de vol... Il y a tant à visiter sur place ! Vous l'aurez compris, nous vous proposons de participer aux visites innoubliables que nous effectuerons sur places. </h4>
 					
 					<h3 class="section-subheading text-muted">
-                    D'un point de vue pratique, vous avez 2 options : soit vous effectuez un virement sur le compte des mariés (demandez-le lors de la confirmation de votre venue dans le formulaire ci-dessous), soit vous déposez une enveloppe dans l'urne consacrée à cet effet le jour du mariage. Un tout grand merci !   </h3>
+                    D'un point de vue pratique, deux options s'offrent à vous: la première consiste à effectuer un virement sur le compte des mariés (demandez-le lorsque vous confirmerez votre venue, voir ci-dessous), la seconde à déposer, le jour du mariage, une enveloppe dans l'urne consacrée à cet effet. D'avance, un tout grand merci !   </h3>
                 <img class="" src="img/liste_mariage/liste mariage-01.png" alt="">
 
                 </div>
