--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Programme du samedi 13 juin 2015 </h2>
-                    <h3 class="section-subheading text-muted">Vous voulez savoir comment va se dérouler la journée ? Vous voilà servis !</h3>
+                    <h3 class="section-subheading text-muted">Vous désirez savoir comment va se dérouler la journée ? Voici les détails:</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -16,12 +16,12 @@
                 <div class="col-md-4">
                     <img class="img-circle"  src="img/services/B_1.jpg" align="middle" alt="">
                     <h4 class="service-heading">En route pour la fête</h4>
-                    <p class="text-muted"> Cinq minutes de trajet, c'est tout ce qui nous sépare de l'apéro, du repas et de la soirée ! </p>
+                    <p class="text-muted"> Cinq minutes de trajet, c'est tout ce qui nous sépare de l'apéro, du repas et de la soirée ! En route !</p>
                 </div>
                 <div class="col-md-4">
                     <img class="img-circle" src="img/services/C_1.jpg" align="middle" alt="">
                     <h4 class="service-heading">Cocktail, repas  & soirée </h4>
-                    <p class="text-muted">Voilà, il n'y a plus qu'à faire la fête. Rendez-vous à partir de 17h à l'Hostellerie Saint-Roch, à Comblain-la-tour (voir ci-dessous pour les plans d'accès).</p>
+                    <p class="text-muted">Voilà, il n'y a plus qu'à faire la fête. Rendez-vous à partir de 17h à l'Hostellerie Saint-Roch, à Comblain-la-tour (voir ci-dessous pour les plans d'accès), pour faire la fête jusqu'au boût de la nuit ! </p>
                 </div>
             </div>
         </div>
