--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Notre histoire !</h2>
-                    <h3 class="section-subheading text-muted"> Relévé de littérature </h3>
+                    <h3 class="section-subheading text-muted"> Relevé de littérature </h3>
                 </div>
             </div>
             <div class="row">
@@ -48,7 +48,7 @@
                                     <h4 class="subheading">La vie à deux !</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"> Nous voici dans notre premier nid douillet, près du centre ville. Nous profiterons durant 4 ans d'une vue imprenable sur Liège et profiterons régulièrement des lumières de la foire d'octobre ainsi que de la verdure printanière du parc d'Avroy. Bien installé et bien entourés, nous voilà lancés dans la vie active ! </p>
+                                    <p class="text-muted"> Nous voici dans notre premier nid douillet, près du centre ville. Casés au 9ème étage, nous profiterons durant 4 ans d'une vue imprenable sur Liège, périodiquement agrémentée par les lumières de la foire d'octobre ainsi que par la verdure printanière du parc d'Avroy. Bien installés et bien entourés, nous voilà lancés dans la vie active ! </p>
                                 </div>
                             </div>
                         </li>
