--- a/_includes/about.html
+++ b/_includes/about.html
@@ -34,7 +34,7 @@
                                     <h4 class="subheading">Diplomés !</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"> Après 5 ans de dur labeur, nous approchons de la fin de nos études. Notre parcours universitaire fût jalonné de plusieurs voyages, de l'absorption d'une quantité subtentielle d'informations qui se transformeront rapidement en souvenirs évanescents, mais il fût surtout le théâtre de nombreuses soirées mémorables ! Vivement le doctorat ! </p>
+                                    <p class="text-muted"> Après 5 ans de dur labeur, nous approchons de la fin de nos études. Notre parcours universitaire fût jalonné de plusieurs voyages, de l'absorption d'une quantité subtantielle d'informations qui se transformeront rapidement en souvenirs évanescents, mais il fût surtout le théâtre de nombreuses soirées mémorables ! Vivement le doctorat ! </p>
                                 </div>
                             </div>
                         </li>
