--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -11,7 +11,7 @@
                         <br>
                        3 - Désirez-vous obtenir le numéro de compte des mariés ? </h3>
 
-                       <a href="mailto:justine.and.fred@gmail.com?subject=Participation au mariage&body=Merci de mentionner (1) l'heure de votre venue, (2) le nombre de participants et (3) d'indiquer si vous désirez le numéro de compte des mariés? A très bientôt, Justine et Fred"> <button type="submit" class="btn btn-xl">Email de confirmation</button></a> 
+                       <a href="mailto:justine.and.fred@gmail.com?subject=Participation au mariage"> <button type="submit" class="btn btn-xl">Email de confirmation</button></a> 
 
                 </div>
 
