--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading"> Liste de Mariage </h2>
-                    <h5 class="section-subheading"> Une liste de mariage ? Pas exactement ! Etant donné que nous sommes d'ores et déjà 
+                    <h5 class="section-subheading" style="line-height:200%"> Une liste de mariage ? Pas exactement ! Etant donné que nous sommes d'ores et déjà 
                     confortablement installés dans notre petit nid douillet, une liste de mariage serait superflue. En revanche, nous allons bientôt prendre la direction des USA pour emménager à Madison, dans le Midwest. Sa position centrale en fait un fantastique camp de base permettant de rejoindre de nombreuses destinations alléchantes: le Yellowstone, New York, Montréal, Chicago, la Louisiane, voire même l'Amérique du sud sont à portée de vol... Il y a tant à visiter sur place ! Vous l'aurez compris, nous vous proposons de participer aux visites innoubliables que nous effectuerons sur places. </h5>
 					
 					<h3 class="section-subheading text-muted">
