--- a/_includes/team.html
+++ b/_includes/team.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading"> Plans d'accès </h2>
-                    <h3 class="section-subheading text-muted"> Alors, comment faire pour venir fêter cela avec nous ?! Cliquez sur les images pour obtenir le plan google map. Pour obtenir un pdf des adresses et plans d'accès, <a href="http://dl.dropbox.com/u/110671384/pdf_plan_d'acces.pdf" target="_blank"> cliquez ici !</a> </h3>
+                    <h3 class="section-subheading "> Alors, comment faire pour venir fêter cela avec nous ?! Cliquez sur les images pour obtenir le plan google map. Pour obtenir un pdf des adresses et plans d'accès, <a href="http://dl.dropbox.com/u/110671384/pdf_plan_d'acces.pdf" target="_blank"> cliquez ici !</a> </h3>
                     
                 </div>
             </div>
