--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,7 @@
                        <br>
                        1 - A quelle heure comptez-vous venir ? <br>
                         <br>
-                       2 - Le nombre de participants (Adultes et enfants) ? <br>
+                       2 - Le nombre de participants (adultes et enfants) ? <br>
                         <br>
                        3 - Désirez-vous obtenir le numéro de compte des mariés ? </h3>
 
