--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,12 +2,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading"> Confirmez votre venue !</h2>
-                    <h3 class="section-subheading text-muted"> Merci de nous communiquer les informations suivantes :   <br>
+                    <h2 class="section-heading"> Confirmez votre venue ! </h2>
+                    <h3 class="section-subheading text-muted" style="line-height:200%"> Afin que nous puissions organiser cette grande fête de manière optimale, merci de nous confirmer au plus vite votre venue ! Veillez à préciser les informations suivantes :   <br>
                        <br>
-                       1 - A quelle heure comptez-vous venir ? <br>
+                       1 - A quelle heure vous joindrez-vous à nous ? <br>
                         <br>
-                       2 - Le nombre de participants (adultes et enfants) ? <br>
+                       2 - Combien serez-vous (adultes et enfants séparés) ? <br>
                         <br>
                        3 - Désirez-vous obtenir le numéro de compte des mariés ? </h3>
 
