--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,24 +4,24 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Programme du samedi 13 juin 2015 </h2>
-                    <h3 class="section-subheading text-muted">Vous désirez savoir comment va se dérouler la journée ? Voici les détails:</h3>
+                    <h3 class="section-subheading text-muted">Vous désirez savoir comment va se dérouler la journée ? Voici les détails: </h3>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
                     <img class="img-circle" src="img/services/A_1.jpg" alt="" align="center">
-                    <h4 class="service-heading">Mariage civil </h4>
-                    <p class="text-muted">Pour ceux qui désirent assister au mariage civil, celui-ci se déroulera à la maison communale de Hamoir. Rendez-vous à 15h00 ! </p>
+                    <h4 class="service-heading"> 15h15 - Mariage civil </h4>
+                    <p class="text-muted">Pour ceux qui désirent assister au mariage civil, celui-ci se déroulera à la maison communale de Hamoir à 15h30. Rendez-vous à 15h15 ! </p>
                 </div>
                 <div class="col-md-4">
                     <img class="img-circle"  src="img/services/B_1.jpg" align="middle" alt="">
-                    <h4 class="service-heading">En route pour la fête</h4>
-                    <p class="text-muted"> Cinq minutes de trajet, c'est tout ce qui nous sépare de l'apéro, du repas et de la soirée ! En route !</p>
+                    <h4 class="service-heading"> 17h00 - En route pour la fête </h4>
+                    <p class="text-muted"> Cinq minutes de trajet, c'est tout ce qui nous sépare de l'apéro, du repas et de la soirée ! En route ! Pour les convives ne passant pas par la case "administration communale", rendez-vous à 17h00 à l'hostellerie Saint-Roch. </p>
                 </div>
                 <div class="col-md-4">
                     <img class="img-circle" src="img/services/C_1.jpg" align="middle" alt="">
-                    <h4 class="service-heading">Cocktail, repas  & soirée </h4>
-                    <p class="text-muted">Voilà, il n'y a plus qu'à faire la fête. Rendez-vous à partir de 17h à l'Hostellerie Saint-Roch, à Comblain-la-tour (voir ci-dessous pour les plans d'accès), pour faire la fête jusqu'au boût de la nuit ! </p>
+                    <h4 class="service-heading"> 21h30 - Soirée ! </h4>
+                    <p class="text-muted"> Voilà, il ne reste plus qu'à faire la fête. Rendez-vous à partir de 21h30 à l'Hostellerie Saint-Roch, à Comblain-la-tour (voir ci-dessous pour les plans d'accès). Au menu : dégustation du gâteau de mariage et fête jusqu'au boût de la nuit ! </p>
                 </div>
             </div>
         </div>
