--- a/_includes/team.html
+++ b/_includes/team.html
@@ -5,7 +5,13 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading"> Plans d'accès </h2>
-                    <h3 class="section-subheading "> Alors, comment faire pour venir fêter cela avec nous ?! Cliquez sur les images pour obtenir le plan google map. Pour obtenir un pdf des adresses et plans d'accès, <a href="http://dl.dropbox.com/u/110671384/pdf_plan_d'acces.pdf" target="_blank"> cliquez ici !</a> </h3>
+
+                    <h4 class="section-subheading "> Alors, où les festivités vont-elles se dérouler et comment s'y rendre ?!  <br>
+
+
+                    </h4>
+
+                    <h3 class="section-subheading" style="line-height:150%"> Cliquez sur les plans d'accès afin obtenir le plan google map correspondant. Pour télécharger un pdf incluant les adresses et plans d'accès, <a href="http://dl.dropbox.com/u/110671384/pdf_plan_d'acces.pdf" target="_blank"> cliquez ici !</a>  <br> Notez que, si vous désirez faire les trajets en train, le dernier voyage en direction de Liège partira de Comblain à 22h00, le suivant le lendemain à 8h00. </h3>
                     
                 </div>
             </div>
@@ -20,8 +26,8 @@
                 </div>
                 <div class="col-md-6">
                     <a href="http://bit.ly/1HPQOoo" target="_blank">
-                    <h4 class="service-heading">Hostellerie du Saint Roch</h4>
-                    <p class="text-muted"> Rue du Parc - Vallee De L'Ourthe, 4180 COMBLAIN-LA-TOUR </p>
+                    <h4 class="service-heading">Hostellerie Saint-Roch</h4>
+                    <p class="text-muted"> Rue du Parc 1, 4180 COMBLAIN-LA-TOUR </p>
                     <img class=""  src="img/acces/B_1.jpg" alt="">
                     </a>
                 </div>
