--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,12 +4,11 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading"> Confirmez votre venue ! </h2>
                     <h3 class="section-subheading text-muted" style="line-height:200%"> Afin que nous puissions organiser cette grande fête de manière optimale, merci de nous confirmer au plus vite votre venue ! Veillez à préciser les informations suivantes :   <br>
-                       <br>
-                       1 - A quelle heure vous joindrez-vous à nous ? <br>
+                    
                         <br>
-                       2 - Combien serez-vous (adultes et enfants séparés) ? <br>
+                       1 - Venez-vous accompagné et/ou avec des enfants ? <br>
                         <br>
-                       3 - Désirez-vous obtenir le numéro de compte des mariés ? </h3>
+                       2 - Désirez-vous obtenir le numéro de compte des mariés ? </h3>
 
                        <a href="mailto:justine.and.fred@gmail.com?subject=Participation au mariage"> <button type="submit" class="btn btn-xl">Email de confirmation</button></a> 
 
