--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,10 +7,14 @@
                     
                         <br>
                        1 - Venez-vous accompagné et/ou avec des enfants ? <br>
-                        <br>
-                       2 - Désirez-vous obtenir le numéro de compte des mariés ? </h3>
 
-                       <a href="mailto:justine.and.fred@gmail.com?subject=Participation au mariage"> <button type="submit" class="btn btn-xl">Email de confirmation</button></a> 
+                       2 - Pour ceux qui viennent de loin (+ de 50 km), désirez-vous que l'on vous aide à trouver un logement ?
+                          <br>
+                         
+                        <h2 class="section-heading">   </h2>
+
+
+                          <a href="mailto:justine.and.fred@gmail.com?subject=Participation au mariage">  <button type="submit" class="btn btn-xl">Email de confirmation</button></a> 
 
                 </div>
 
