--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,10 +17,10 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Décembre 2007</h4>
-                                    <h4 class="subheading">Nos début...</h4>
+                                    <h4 class="subheading">Nos débuts...</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"> Étudier la systématique des algues bleues, ce n'est pas très sexy. L'appareil reproducteur des gastéropodes non plus, d'ailleurs... Et c'est dans ce contexte que nous faisons connaissance. Après s'être courtisés pendant quelques mois, c'est le fruit de la fermentation du houblon qui catalisera le début de notre histoire: pas très romantique, mais diablement efficace ! Merci Saint-Nicolas ! </p>
+                                    <p class="text-muted"> Étudier la systématique des algues bleues, ce n'est pas très sexy. L'appareil reproducteur des gastéropodes non plus, d'ailleurs... Et c'est dans ce contexte que nous faisons connaissance. Après s'être courtisés pendant quelques mois, c'est le fruit de la fermentation du houblon qui catalysera le début de notre histoire: pas très romantique, mais diablement efficace ! Merci Saint-Nicolas ! </p>
                                 </div>
                             </div>
                         </li>
@@ -31,10 +31,10 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Septembre 2010 </h4>
-                                    <h4 class="subheading">Diplomés !</h4>
+                                    <h4 class="subheading">Diplômés !</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"> Après 5 ans de dur labeur, nous approchons de la fin de nos études. Notre parcours universitaire fut jalonné de plusieurs voyages, de l'absorption d'une quantité subtantielle d'informations qui se transformeront rapidement en souvenirs évanescents, mais il fut surtout le théâtre de nombreuses soirées mémorables ! Vivement le doctorat ! </p>
+                                    <p class="text-muted"> Après 5 ans de dur labeur, nous approchons de la fin de nos études. Notre parcours universitaire fut jalonné de plusieurs voyages, de l'absorption d'une quantité substantielle d'informations qui se transformeront rapidement en souvenirs évanescents, mais il fut surtout le théâtre de nombreuses soirées mémorables ! Vivement le doctorat ! </p>
                                 </div>
                             </div>
                         </li>
@@ -77,7 +77,7 @@
                                     <h4 class="subheading">USA ! </h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"> Nous voilà sur le départ pour les USA: une nouvelle aventure démarrera en 2016, à l'Université de Madison, au Wisconsin. Une petite ville américaine située dans le Midwest, où les saisons sont réputées très constrastées: sortez les moufles !</p>
+                                    <p class="text-muted"> Nous voilà sur le départ pour les USA: une nouvelle aventure démarrera en 2016, à l'Université de Madison, au Wisconsin. Une petite ville américaine située dans le Midwest, où les saisons sont réputées très constrastées : sortez les moufles !</p>
                                 </div>
                             </div>
                         </li>
