--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -7,12 +7,12 @@
                     <h5 class="section-subheading" style="line-height:200%"> <p><b><center> Une liste de mariage ? Pas exactement ! </p></b></center> </h5>
 
                      <h6 class="section-subheading" style="line-height:150%"> 
-                    Étant donné que nous sommes d'ores et déjà confortablement installés dans notre petit nid douillet, une liste de mariage à proprement parlé serait superflue. En revanche, nous allons bientôt prendre la direction des USA pour emménager à Madison, dans le Midwest. Sa position centrale en fait un fantastique camp de base afin de rejoindre de nombreuses destinations alléchantes: le Yellowstone, New York, Montréal, Chicago, la Louisiane, voire même l'Amérique du sud sont à portée de vol... Il y a tant à visiter sur place ! Vous l'aurez compris, nous vous proposons de participer aux visites innoubliables que nous effectuerons durant notre séjour aux Etats-Unis: vous trouverez ci-dessous un lien vers notre liste de mariage. Un tout grand merci !   </h6>
+                    Nous sommes d'ores et déjà confortablement installés dans notre petit nid douillet, une liste de mariage à proprement parler serait donc superflue. En revanche, nous allons bientôt prendre la direction des USA pour emménager à Madison, dans le Midwest. Sa position centrale en fait un fantastique camp de base afin de rejoindre de nombreuses destinations alléchantes : le Yellowstone, New York, Montréal, Chicago, la Louisiane, voire même l'Amérique du Sud sont à portée de vol... Il y a tant à visiter sur place ! Vous l'aurez compris, nous vous proposons de participer aux visites inoubliables que nous effectuerons durant notre séjour aux Etats-Unis : vous trouverez ci-dessous un lien vers notre liste de mariage. Un tout grand merci !   </h6>
 					
                     <a href="http://www.kadolog.be/liste/mariage-de-justine-et-fred"target="_blank"> <button type="submit" class="btn btn-xl">Liste de mariage</button></a> 
 
 					<h3 class="section-subheading text-muted" style="line-height:150%">
-                    Si vous le préférez, une urne sera également mise à votre disposition le jour du mariage !   </h3>
+                    Si vous le préférez, une urne sera également mise à votre disposition le jour du mariage...   </h3>
                 <img class="" src="img/liste_mariage/liste mariage-01.png" alt="">
 
                 </div>
