--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,13 +3,18 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading"> Confirmez votre venue ! </h2>
-                    <h3 class="section-subheading text-muted" style="line-height:200%"> Afin que nous puissions organiser cette grande fête de manière optimale, merci de nous confirmer au plus vite votre venue ! Veillez à préciser les informations suivantes :   <br>
+                    <h3 class="section-subheading text-muted" style="line-height:200%"> Afin que nous puissions organiser cette grande fête de manière optimale, merci de nous confirmer au plus vite votre venue ! 
+                    <br>
+                    Veillez à préciser les informations suivantes :   <br>
                     
-                        <br>
-                       1 - Venez-vous accompagné et/ou avec des enfants ? <br>
+                    <br>
+                       1 - Je viens : seul ou accompagné ? <br>
 
-                       2 - Pour ceux qui viennent de loin (+ de 50 km), désirez-vous que l'on vous aide à trouver un logement ?
-                          <br>
+                       2 - Je viens avec des enfants : combien ?
+
+                       3 - Si vous venez de loin, désirez-vous que l'on vous aide à trouver un logement ?
+
+                      <br>
                          
                         <h2 class="section-heading">   </h2>
 
