--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,7 +50,7 @@
                 
                 <div class="intro-lead-in"> Bienvenue à notre mariage!</div>
                 <div class="intro-heading"> Rendez-vous le samedi 13 juin 2015 !</div>
-                <a href="#services" class="page-scroll btn btn-xl">En savoir plus!</a>
+                <a href="#services" class="page-scroll btn btn-xl">En savoir plus</a>
             </div>
         </div>
     </header>
