--- a/_includes/team.html
+++ b/_includes/team.html
@@ -6,12 +6,12 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading"> Plans d'accès </h2>
 
-                    <h4 class="section-subheading "> Alors, où les festivités vont-elles se dérouler et comment s'y rendre ?!  <br>
+                    <h4 class="section-subheading "> Alors, où les festivités vont-elles se dérouler et comment s'y rendre ?  <br>
 
 
                     </h4>
 
-                    <h3 class="section-subheading" style="line-height:150%"> Cliquez sur les plans d'accès afin obtenir le plan google map correspondant. Pour télécharger un pdf incluant les adresses et plans d'accès, <a href="http://dl.dropbox.com/u/110671384/pdf_plan_d'acces.pdf" target="_blank"> cliquez ici !</a>  <br> Notez que, si vous désirez faire les trajets en train, le dernier voyage en direction de Liège partira de Comblain à 22h00, le suivant le lendemain à 8h00. </h3>
+                    <h3 class="section-subheading" style="line-height:150%"> Cliquez sur les plans d'accès afin d'obtenir le plan google map correspondant. Pour télécharger un pdf incluant les adresses et plans d'accès, <a href="http://dl.dropbox.com/u/110671384/pdf_plan_d'acces.pdf" target="_blank"> cliquez ici !</a>  <br> Notez que, si vous désirez faire les trajets en train (bonne chance...), le dernier voyage en direction de Liège partira de Comblain à 22h00, le suivant le lendemain à 8h00. </h3>
                     
                 </div>
             </div>
@@ -19,7 +19,7 @@
                 <div class="col-md-6">
                     <a href="http://bit.ly/1DbN4YY" target="_blank">
                     <h4 class="service-heading"> Administration communale de Hamoir </h4>
-                    <p class="text-muted">rue de Tohogne 14 - 4180 HAMOIR </p>
+                    <p class="text-muted">Rue de Tohogne 14 - 4180 HAMOIR </p>
                     <img class="" src="img/acces/A_1.jpg" alt="">
                     </a>
 
