--- a/_includes/services.html
+++ b/_includes/services.html
@@ -16,12 +16,12 @@
                 <div class="col-md-4">
                     <img class="img-circle"  src="img/services/B_1.jpg" align="middle" alt="">
                     <h4 class="service-heading"> 17h00 - En route pour les festivités </h4>
-                    <p class="text-muted"> Cinq minutes de trajet, c'est tout ce qui nous sépare de l'apéro, du repas et de la soirée ! En route ! Pour les convives ne passant pas par la case "administration communale", rendez-vous à 17h00 à l'hostellerie Saint-Roch à Comblain-la-tour. </p>
+                    <p class="text-muted"> Cinq minutes de trajet, c'est tout ce qui nous sépare de l'apéro, du repas et de la soirée ! En route ! Pour les convives ne passant pas par la case "administration communale", rendez-vous à 17h00 à l'hostellerie Saint-Roch à Comblain-la-tour. Au menu : Apéritifs & zakouskis, grand buffet d'entrées, cochon à la broche et gâteau de mariage glacé. Miam ! </p>
                 </div>
                 <div class="col-md-4">
                     <img class="img-circle" src="img/services/C_1.jpg" align="middle" alt="">
                     <h4 class="service-heading"> 21h30 - Soirée ! </h4>
-                    <p class="text-muted"> Voilà, il ne reste plus qu'à faire la fête. Rendez-vous à partir de 21h30 à l'Hostellerie Saint-Roch à Comblain-la-tour (voir ci-dessous pour les plans d'accès).<br> Au menu : dégustation du gâteau de mariage et fiesta jusqu'au bout de la nuit! </p>
+                    <p class="text-muted"> Voilà, il ne reste plus qu'à faire la fête. Rendez-vous à partir de 21h30 à l'Hostellerie Saint-Roch à Comblain-la-tour (voir ci-dessous pour les plans d'accès).<br> Nous vous invitons à nous rejoindre pour la dégustation du gâteau de mariage, mais surtout à venir faire la fiesta jusqu'au bout de la nuit! </p>
                 </div>
             </div>
         </div>
