--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -16,13 +16,13 @@
 
                       <br>
                          
-                        
+                        </h3>
 
 
-                          <br> <a href="mailto:justine.and.fred@gmail.com?subject=Participation au mariage">  <button type="submit" class="btn btn-xl">Email de confirmation</button></a> 
+                          <br> <a href="mailto:justine.and.fred@gmail.com?subject=Participation au mariage">  <button type="submit" class="btn btn-xl">Email de confirmation</button></a> <br>
+<br>
 
-
-                 <h3> <p style="font-size:12px"> Si vous rencontrez des problèmes avec le formulaire de contact, <br> vous pouvez également confirmer votre venue en répondant à notre e-mail initial. </p></h3>
+                 <h4 class="section-heading" color = "#e7e5e5"> <p style="font-size:10px">  Si vous rencontrez des problèmes avec le formulaire de contact, <br> vous pouvez également confirmer votre venue en répondant à l'adresse "justine.and.fred@gmail.com". </p></h4>
 
 
                 </div>
